# LmDotnetTools

./: .csharpierrc  .csharpierrc.json  .dockerignore  .editorconfig  .env.test  .gitattributes  .gitignore  .mcp.json  .windsurfrules  AgentIdBehaviorChanges.md  ApiAuthFixes.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  Dockerfile  FORMATTING.md  GraphExtractionService-Enhancement-Summary.md  LICENSE  LmDotnetTools.sln  MemoryServer-Testing-Guide.md  README.md  RERANKING_SERVICE_INTEGRATION_SUMMARY.md  SECURITY-FIX-API-KEY-REMOVAL.md  WI-MM008-Performance-Optimization-Prompt.md  build_output.txt  examples-publish-secure.ps1  kv_store  package-lock.json  publish-nuget-packages.ps1  query.sql  query_detailed_sequence.sql  query_recent_runs.sql  query_server_reception.sql  query_trace.sql  query_trace_2.sql  run_memory_server.ps1  test_schema_debug.cs  th3.json  (+3 more)
.agent/: rules.md
.claude/: .mcp.json  settings.local.json
.githooks/: pre-commit
.husky/: pre-commit  task-runner.json
.revobot/: preview.yaml
McpServers/PythonMCPServer/: pyproject.toml  requirements.txt  run.bat
McpServers/PythonMCPServer/Docker/: Dockerfile  build_docker.ps1  requirements.txt
McpServers/PythonMCPServer/src/: __init__.py  server.py
copilotkit-test-client/: .gitignore  PLAYWRIGHT_TEST_REPORT.md  QUICKSTART.md  README.md  index.html  logger.js  package-lock.json  package.json  server.js  vite.config.js
docs/: CodexAppServer-DebugQueries.sql  CodexAppServer-ManualTesting-Failures-2026-02-17.md  CodexInternalTools-Queries.duckdb.sql  (+10 more)
(+2393 files in other folders)
